<resources>
    <string name="app_name">I Want</string>
    <string name="name">Name</string>
    <string name="edited">Edited</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="id">No</string>
    <string name="ico">Icon</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="created">Created</string>
    <string name="myName">Lies Van der Haegen</string>
    <string name="classgroup">INF201A</string>
    <string name="bg">bg image</string>
    <string name="euroSign">€</string>
    <string name="total">Total</string>
    <string name="wishlists">Wishlists</string>
    <string name="images">Images</string>
    <string name="random">Random</string>
</resources>
