<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/iconImageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/nameTextView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/idTextView"
            app:layout_constraintBaseline_toBaselineOf="@+id/idTextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
            android:text="@string/created"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/createdTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="4dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/previousImageButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
            android:text="@string/edited"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editedTextView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="4dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBaseline_toBaselineOf="@+id/createdTextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="207dp" android:id="@+id/guideline"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/previousImageButton"
            android:rotation="90" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/previous"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/nextImageButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:rotation="270" android:contentDescription="@string/next"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/createdTextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
</android.support.constraint.ConstraintLayout>