<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <TextView
            android:text="@string/about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/aboutTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
            android:text="@string/myName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/aboutTextView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
            android:text="@string/classgroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/classTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2" app:layout_constraintGuide_begin="136dp"
                                          android:orientation="vertical"/>
    <ImageView
            android:layout_width="0dp"
            android:id="@+id/profileImageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/aboutTextView"
            app:layout_constraintEnd_toStartOf="@+id/nameTextView" android:layout_marginEnd="8dp"
            android:scaleType="fitCenter" android:cropToPadding="true" android:adjustViewBounds="true"
            android:layout_height="wrap_content" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>